--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+body    {
+    background-color: darkgrey;
+}
+
 h1  {
     background-color: blue;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    color: #fff;
+    text-align: center;
 }
