added any.txt and updated style.css

--- a/style.css
+++ b/style.css
@@ -5,6 +5,6 @@ body    {
 h1  {
     background-color: blue;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    color: #fff;
+    color: rgb(116, 110, 110);
     text-align: center;
 }
